--- a/lab3/Code/Makefile
+++ b/lab3/Code/Makefile
@@ -2,7 +2,8 @@
 CC = gcc
 FLEX = flex
 BISON = bison
-CFLAGS = -std=c99
+CFLAGS = -std=c99 #-fsanitize=address
+LDFLAGS = #-fsanitize=address
 
 # 编译目标：src目录下的所有.c文件
 CFILES = $(shell find ./ -name "*.c")
@@ -15,7 +16,7 @@ LFO = $(LFC:.c=.o)
 YFO = $(YFC:.c=.o)
 
 parser: syntax $(filter-out $(LFO),$(OBJS))
-	$(CC) -o parser $(filter-out $(LFO),$(OBJS)) -lfl -ly
+	$(CC) -o parser $(filter-out $(LFO),$(OBJS)) -lfl -ly $(LDFLAGS)
 
 syntax: lexical syntax-c
 	$(CC) -c $(YFC) -o $(YFO)
@@ -40,24 +41,6 @@ alltest:
 	./parser ../Test/test2.cmm
 	./parser ../Test/test3.cmm
 	./parser ../Test/test4.cmm
-	./parser ../Test/test5.cmm
-	./parser ../Test/test6.cmm
-	./parser ../Test/test7.cmm	
-	./parser ../Test/test8.cmm
-	./parser ../Test/test9.cmm
-	./parser ../Test/test10.cmm
-	./parser ../Test/test11.cmm
-	./parser ../Test/test12.cmm
-	./parser ../Test/test13.cmm
-	./parser ../Test/test14.cmm	
-	./parser ../Test/test15.cmm
-	./parser ../Test/test16.cmm
-	./parser ../Test/test17.cmm
-	./parser ../Test/test18.cmm	
-	./parser ../Test/test19.cmm
-	./parser ../Test/test20.cmm
-	./parser ../Test/test21.cmm
-	./parser ../Test/test22.cmm
 
 clean:
 	rm -f parser lex.yy.c syntax.tab.c syntax.tab.h syntax.output scanner
